--- a/future-contract/pom.xml
+++ b/future-contract/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>future-spring-boot-starter</artifactId>
+    <artifactId>future-contract</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -17,13 +17,4 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.xujie</groupId>
-            <artifactId>future-spring-boot-autoconfigure</artifactId>
-            <version>1.0.0</version>
-            <scope>compile</scope>
-        </dependency>
-
-    </dependencies>
 </project>
