--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <rocketmq-spring-boot.version>2.3.0</rocketmq-spring-boot.version>
         <snail-job.version>1.3.0</snail-job.version>
         <dubbo.version>3.3.0</dubbo.version>
+        <mongo-plus.version>2.1.8.1</mongo-plus.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -56,7 +57,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
+            <dependency>
+                <groupId>com.mongoplus</groupId>
+                <artifactId>mongo-plus-boot-starter</artifactId>
+                <version>${mongo-plus.version}</version>
+            </dependency>
             <!-- Spring Cloud Alibaba依赖 -->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
@@ -164,7 +169,6 @@
         </dependency>
 
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -189,7 +193,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
 
 
         <dependency>
